# sense_template

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  package.xml  pyproject.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_task_request.md
.github/workflows/: linting.yml
docs/figs/: README.md
