[project]
name = "sense_template"
dynamic = ["version"]
dependencies = []
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "ruff==0.8.2",
  "mypy==1.13.0",
  "docformatter==1.7.5", 
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true
show_column_numbers = true
pretty = true
mypy_path = "typings"
files = ["src"]
